--- a/docker/mediastack/docker-compose.yml
+++ b/docker/mediastack/docker-compose.yml
@@ -63,7 +63,7 @@ services:
       - WEBUI_PORT=8080
     volumes:
       - ./config/qbittorrent:/config
-      - /mnt/harddrive/Downloads:/downloads
+      - ${DRIVE_PATH}/Downloads:/downloads
     restart: unless-stopped
     labels:
       - traefik.enable=true
@@ -82,8 +82,8 @@ services:
       - TZ=${TZ}
     volumes:
       - ./config/radarr:/config
-      - /mnt/harddrive:/nas
-      - /mnt/harddrive/Downloads:/downloads
+      - ${DRIVE_PATH}:/nas
+      - ${DRIVE_PATH}/Downloads:/downloads
     restart: unless-stopped
     labels:
       - traefik.enable=true
@@ -102,7 +102,7 @@ services:
       - TZ=Etc/UTC
     volumes:
       - ./config/bazarr:/config
-      - /mnt/harddrive:/nas
+      - ${DRIVE_PATH}:/nas
     restart: unless-stopped
     labels:
       - traefik.enable=true
@@ -121,8 +121,8 @@ services:
       - TZ=${TZ}
     volumes:
       - ./config/sonarr:/config
-      - /mnt/harddrive:/nas
-      - /mnt/harddrive/Downloads:/downloads
+      - ${DRIVE_PATH}:/nas
+      - ${DRIVE_PATH}/Downloads:/downloads
     restart: unless-stopped
     labels:
       - traefik.enable=true
