--- a/docker/pihole-unbound/docker-compose.yml
+++ b/docker/pihole-unbound/docker-compose.yml
@@ -13,10 +13,10 @@ services:
   unbound:
     container_name: unbound
     restart: unless-stopped
-    image: "mvance/unbound-rpi:latest"
+    image: "${IMAGE}:latest"
     networks:
       homelab:
-        ipv4_address: 10.1.3.1
+        ipv4_address: 10.1.7.1
 
   pihole:
     container_name: pihole
@@ -25,21 +25,21 @@ services:
     ports:
       - "53:53/tcp"
       - "53:53/udp"
+    networks:
+      homelab:
+        ipv4_address: 10.1.7.2
     environment:
-      ServerIP: 10.1.3.2
+      ServerIP: 10.1.7.2
       TZ: "Europe/Amsterdam"
       DNSSEC: true
-      DNS1: 10.1.3.1 # Point to unbound
-      DNS2: 10.1.3.1 # Also the second defined, otherwise it auto selects Google DNS
+      DNS1: 10.1.7.1 # Point to unbound
+      DNS2: 10.1.7.1 # Also the second defined, otherwise it auto selects Google DNS
       WEBPASSWORD: ""
       QUERY_LOGGING: false
     volumes:
       - "./config/pihole:/etc/pihole"
       - "./config/dnsmasq.d:/etc/dnsmasq.d"
     restart: unless-stopped
-    networks:
-      homelab:
-        ipv4_address: 10.1.3.2
 
     labels:
       - traefik.enable=true
@@ -47,26 +47,3 @@ services:
       - traefik.http.routers.pihole.tls=true
       - traefik.http.routers.pihole.tls.certresolver=cloudflare
       - traefik.http.services.pihole.loadbalancer.server.port=80
-
-  wireguard:
-    image: lscr.io/linuxserver/wireguard:latest
-    container_name: wireguard
-    cap_add:
-      - NET_ADMIN
-      - SYS_MODULE
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=${TZ}
-      # - PEERS=MBP,14Pro
-      - PEERDNS=10.1.3.2
-    volumes:
-      - ./config/wireguard:/config
-    ports:
-      - 51820:51820/udp
-    sysctls:
-      - net.ipv4.conf.all.src_valid_mark=1
-    restart: unless-stopped
-    networks:
-      homelab:
-        ipv4_address: 10.1.3.3
