upgrades people upgrades

--- a/docker/mediastack/.env.example
+++ b/docker/mediastack/.env.example
@@ -4,9 +4,13 @@ VPN_PASSWORD=password
 VPN_COUNTRY=country
 
 TZ=timezone
+DRIVE_PATH=/mnt/drive
 
 JACKETT_DOMAIN=domain.example.com
 QBITTORRENT_DOMAIN=domain.example.com
 RADARR_DOMAIN=domain.example.com
 SONARR_DOMAIN=domain.example.com
 BAZARR_DOMAIN=domain.example.com
+PLEX_DOMAIN=domain.example.com
+
+PLEX_CLAIM_TOKEN=token
