--- a/docker/pihole-unbound/docker-compose.yml
+++ b/docker/pihole-unbound/docker-compose.yml
@@ -31,7 +31,8 @@ services:
     environment:
       ServerIP: 10.1.7.2
       TZ: "Europe/Amsterdam"
-      DNSSEC: true
+      DNSSEC: false
+      CUSTOM_CACHE_SIZE: 0
       DNS1: 10.1.7.1 # Point to unbound
       DNS2: 10.1.7.1 # Also the second defined, otherwise it auto selects Google DNS
       WEBPASSWORD: ""
