--- a/docker/pihole-unbound/docker-compose.yml
+++ b/docker/pihole-unbound/docker-compose.yml
@@ -30,18 +30,17 @@ services:
         ipv4_address: 10.1.7.2
     environment:
       ServerIP: 10.1.7.2
-      TZ: "Europe/Amsterdam"
+      TZ: "${TZ}"
       DNSSEC: false
       CUSTOM_CACHE_SIZE: 0
       DNS1: 10.1.7.1 # Point to unbound
       DNS2: 10.1.7.1 # Also the second defined, otherwise it auto selects Google DNS
-      WEBPASSWORD: ""
+      WEBPASSWORD: "${WEBPASSWORD}"
       QUERY_LOGGING: false
     volumes:
       - "./config/pihole:/etc/pihole"
       - "./config/dnsmasq.d:/etc/dnsmasq.d"
     restart: unless-stopped
-
     labels:
       - traefik.enable=true
       - traefik.http.routers.pihole.rule=Host(`${DOMAIN_NAME}`)
