--- a/docker/mediastack/docker-compose.yml
+++ b/docker/mediastack/docker-compose.yml
@@ -102,8 +102,8 @@ services:
         # Plex for Roku Companion
         # - '8324:8324/tcp'
         # DLNA Server
-        - '32469:32469/tcp'
-        - '1900:1900/udp'
+        # - '32469:32469/tcp'
+        # - '1900:1900/udp'
         # Network discovery
         - '32410:32410/udp'
         - '32412:32412/udp'
