--- a/docker/mediastack/docker-compose.yml
+++ b/docker/mediastack/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - VPN_SERVICE_PROVIDER=${VPN_SERVICE_PROVIDER}
       - OPENVPN_USER=${VPN_USERNAME}
       - OPENVPN_PASSWORD=${VPN_PASSWORD}
-      - SERVER_COUNTRIES=${VPN_COUNTRY}
+      - SERVER_HOSTNAMES=${VPN_HOSTNAMES}
     volumes:
       - ./config/gluetun:/gluetun
     labels:
