--- a/docker/homarr/docker-compose.yml
+++ b/docker/homarr/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     volumes:
       - ./config/configs:/app/data/configs
       - ./config/icons:/app/public/icons
+      - ./config/data:/
     networks:
       homelab:
         ipv4_address: 10.1.3.1
