--- a/docker/traefik/docker-compose.yml
+++ b/docker/traefik/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - CF_ZONE_API_TOKEN=${CF_ZONE_API_TOKEN}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./config/traefik.yml:/etc/traefik/traefik.yml:ro
+      - ../config/traefik/traefik.yml:/etc/traefik/traefik.yml:ro
     networks:
       homelab:
         ipv4_address: 10.1.2.1
