--- a/docker/homarr/docker-compose.yml
+++ b/docker/homarr/docker-compose.yml
@@ -15,9 +15,9 @@ services:
     image: ghcr.io/ajnart/homarr:latest
     restart: unless-stopped
     volumes:
-      - ../homarr/config/configs:/app/data/configs
-      - ../homarr/config/icons:/app/public/icons
-      - ../homarr/config/data:/
+      - ../config/homarr/configs:/app/data/configs
+      - ../config/homarr/icons:/app/public/icons
+      - ../config/homarr/data:/data
     networks:
       homelab:
         ipv4_address: 10.1.3.1
