--- a/docker/mediastack/docker-compose.yml
+++ b/docker/mediastack/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - "7878:7878"
       - "8989:8989"
       - "9696:9696"
+      - "8191:8191"
     cap_add:
       - NET_ADMIN
     environment:
@@ -174,3 +175,10 @@ services:
       - traefik.http.routers.prowlarr.tls.certresolver=cloudflare
       - traefik.http.services.prowlarr.loadbalancer.server.port=9696
 
+  flaresolverr:
+    container_name: flaresolverr
+    network_mode: "service:gluetun"
+    environment:
+        - LOG_LEVEL=info
+    restart: unless-stopped
+    image: ghcr.io/flaresolverr/flaresolverr:latest
