--- a/docker/mediastack/docker-compose.yml
+++ b/docker/mediastack/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - com.centurylinklabs.watchtower.enable=false
 
   qbittorrent:
-    image: lscr.io/linuxserver/qbittorrent:4.6.0
+    image: lscr.io/linuxserver/qbittorrent:latest
     container_name: qbittorrent
     network_mode: "service:gluetun"
     environment:
@@ -57,6 +57,8 @@ services:
       - traefik.http.routers.qbt.tls=true
       - traefik.http.routers.qbt.tls.certresolver=cloudflare
       - traefik.http.services.qbt.loadbalancer.server.port=8080
+    depends_on:
+      - gluetun
 
   radarr:
     image: lscr.io/linuxserver/radarr:latest
@@ -77,6 +79,9 @@ services:
       - traefik.http.routers.radarr.tls=true
       - traefik.http.routers.radarr.tls.certresolver=cloudflare
       - traefik.http.services.radarr.loadbalancer.server.port=7878
+    depends_on:
+      - gluetun
+
 
   sonarr:
     image: lscr.io/linuxserver/sonarr:latest
@@ -97,6 +102,9 @@ services:
       - traefik.http.routers.sonarr.tls=true
       - traefik.http.routers.sonarr.tls.certresolver=cloudflare
       - traefik.http.services.sonarr.loadbalancer.server.port=8989
+    depends_on:
+      - gluetun
+
   
   plex:
     container_name: plex
@@ -122,6 +130,7 @@ services:
     environment:
         - TZ=${TZ}
         - PLEX_CLAIM=${PLEX_CLAIM_TOKEN}
+        - ADVERTISE_IP="http://192.168.1.20:32400/"
     volumes:
         - ../config/mediastack/plex:/config
         - ../config/mediastack/plex/transcode:/transcode
@@ -174,6 +183,9 @@ services:
       - traefik.http.routers.prowlarr.tls=true
       - traefik.http.routers.prowlarr.tls.certresolver=cloudflare
       - traefik.http.services.prowlarr.loadbalancer.server.port=9696
+    depends_on:
+      - gluetun
+
 
   flaresolverr:
     container_name: flaresolverr
@@ -182,3 +194,5 @@ services:
         - LOG_LEVEL=info
     restart: unless-stopped
     image: ghcr.io/flaresolverr/flaresolverr:latest
+    depends_on:
+      - gluetun
