--- a/ansible/roles/update/tasks/main.yml
+++ b/ansible/roles/update/tasks/main.yml
@@ -1,9 +1,11 @@
 ---
 - name: Update APT package cache
+  become: true
   apt:
     update_cache: yes
 
 - name: Upgrade packages
+  become: true
   apt:
     upgrade: dist
     autoremove: yes
