--- a/docker/portainer/docker-compose.yml
+++ b/docker/portainer/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "portainer_data:/data"
+    ports:
+      - 9443:9443
     networks:
       homelab:
         ipv4_address: 10.1.1.1
