--- a/docker/pihole-unbound/docker-compose.yml
+++ b/docker/pihole-unbound/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     container_name: unbound
     restart: unless-stopped
     image: "${IMAGE}:latest"
+    volumes:
+      - "../config/pihole-unbound:/opt/unbound/etc/unbound/unbound.log"
     networks:
       homelab:
         ipv4_address: 10.1.7.1
