--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,7 +3,9 @@ name: 'Terraform'
 on:
   push:
     branches: [ "main" ]
+    paths: terraform/*
   pull_request:
+    paths: terraform/*
 
 permissions:
   contents: read
