--- a/docker/traefik/docker-compose.yml
+++ b/docker/traefik/docker-compose.yml
@@ -1,11 +1,6 @@
 networks:
-  homelab:
-    name: homelab
-    ipam:
-      driver: default
-      config:
-        - subnet: "10.1.0.0/16"
-    external: true
+  proxy:
+   name: proxy
 
 services:
   traefik:
@@ -41,5 +36,4 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
-      homelab:
-        ipv4_address: 10.1.2.1
+      - proxy
