--- a/docker/homepage/docker-compose.yml
+++ b/docker/homepage/docker-compose.yml
@@ -1,11 +1,6 @@
 networks:
-  homelab:
-    name: homelab
-    ipam:
-      driver: default
-      config:
-        - subnet: "10.1.0.0/16"
-    external: true
+  proxy:
+    name: proxy
 
 services:
   homepage:
@@ -15,8 +10,7 @@ services:
       PUID: 1000 # -- optional, your user id
       PGID: 992 # -- optional, your group id
     networks:
-      homelab:
-        ipv4_address: 10.1.5.1
+      - proxy
     volumes:
       - ../config/homepage:/app/config
       - /var/run/docker.sock:/var/run/docker.sock:ro # Docker integration
