--- a/docker/pihole-unbound/docker-compose.yml
+++ b/docker/pihole-unbound/docker-compose.yml
@@ -1,10 +1,7 @@
 networks:
-  homelab:
-    name: homelab
-    ipam:
-      driver: default
-      config:
-        - subnet: "10.1.0.0/16"
+  proxy:
+    name: proxy
+    external: true
 
 services:
   unbound:
@@ -14,8 +11,7 @@ services:
     volumes:
       - "../config/pihole-unbound:/opt/unbound/etc/unbound/unbound.log"
     networks:
-      homelab:
-        ipv4_address: 10.1.7.1
+      proxy:
 
   pihole:
     container_name: pihole
@@ -25,15 +21,13 @@ services:
       - "53:53/tcp"
       - "53:53/udp"
     networks:
-      homelab:
-        ipv4_address: 10.1.7.2
+      proxy:
     environment:
-      ServerIP: 10.1.7.2
       TZ: "${TZ}"
       DNSSEC: false
       CUSTOM_CACHE_SIZE: 0
-      DNS1: 10.1.7.1 # Point to unbound
-      DNS2: 10.1.7.1 # Also the second defined, otherwise it auto selects Google DNS
+      DNS1: unbound
+      DNS2: unbound
       WEBPASSWORD: "${WEBPASSWORD}"
       QUERY_LOGGING: false
     volumes:
