--- a/docker/wireguard/docker-compose.yml
+++ b/docker/wireguard/docker-compose.yml
@@ -1,11 +1,8 @@
 networks:
-  homelab:
-    name: homelab
-    ipam:
-      driver: default
-      config:
-        - subnet: "10.1.0.0/16"
+  proxy:
+    name: proxy
     external: true
+
 
 services:  
   wg-easy:
@@ -15,22 +12,20 @@ services:
       - NET_ADMIN
       - SYS_MODULE
     environment:
-        - LANG=en
-        - WG_HOST=${WG_HOST}
-        - PASSWORD=${ADMIN_PASSWORD}
-        - WG_DEFAULT_DNS=10.1.7.2
+        LANG: en
+        WG_HOST: ${WG_HOST}
+        PASSWORD: ${ADMIN_PASSWORD}
+        WG_DEFAULT_DNS: 172.19.0.6
     volumes:
       - ../config/wg-easy:/etc/wireguard
     ports:
         - 51820:51820/udp
-        - 51821:51821/tcp
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
       - net.ipv4.ip_forward=1
     restart: unless-stopped
     networks:
-      homelab:
-        ipv4_address: 10.1.8.1
+      - proxy
     labels:
       - traefik.enable=true
       - traefik.http.routers.wg-easy.rule=Host(`${DOMAIN_NAME}`)
