--- a/docker/duplicati/docker-compose.yml
+++ b/docker/duplicati/docker-compose.yml
@@ -1,8 +1,8 @@
-version: "2.1"
 services:
   duplicati:
     image: lscr.io/linuxserver/duplicati:latest
     container_name: duplicati
+    network_mode: host
     environment:
       - PUID=1000
       - PGID=1000
@@ -11,6 +11,4 @@ services:
       - ../config/duplicati/config:/config
       - ../config/duplicati/backups:/backups
       - ${DOCKER_CONFIG_PATH}:/docker-configs
-    ports:
-      - 8201:8200
     restart: unless-stopped
