--- a/docker/portainer/docker-compose.yml
+++ b/docker/portainer/docker-compose.yml
@@ -1,13 +1,6 @@
-version: "3.6"
-
 networks:
-  homelab:
-    name: homelab
-    ipam:
-      driver: default
-      config:
-        - subnet: "10.1.0.0/16"
-    external: true
+  proxy:
+    name: proxy
 
 volumes:
   portainer_data:
@@ -21,11 +14,8 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "portainer_data:/data"
-    ports:
-      - 9443:9443
     networks:
-      homelab:
-        ipv4_address: 10.1.1.1
+      - proxy
     labels:
       - traefik.enable=true
       - traefik.http.routers.portainer.rule=Host(`${DOMAIN_NAME}`)
