--- a/docker/your-spotify/docker-compose.yml
+++ b/docker/your-spotify/docker-compose.yml
@@ -1,18 +1,13 @@
 ---
-version: "3"
-
 networks:
-  homelab:
-    name: homelab
-    ipam:
-      driver: default
-      config:
-        - subnet: "10.1.0.0/16"
+  proxy:
+    name: proxy
     external: true
 
 services:
   server:
     image: yooooomi/your_spotify_server
+    container_name: server
     restart: unless-stopped
     # ports:
     #   - "8081:8080"
@@ -21,7 +16,7 @@ services:
     depends_on:
       - mongo
     networks:
-      - homelab
+      - proxy
     environment:
       API_ENDPOINT: ${API_ENDPOINT} # This MUST be included as a valid URL in the spotify dashboard (see below)
       CLIENT_ENDPOINT: ${CLIENT_ENDPOINT}
@@ -37,11 +32,12 @@ services:
 
   web:
     image: yooooomi/your_spotify_client
+    container_name: web
     restart: unless-stopped
     # ports:
     #   - "3000:3000"
     networks:
-      - homelab
+      - proxy
     environment:
       API_ENDPOINT: ${API_ENDPOINT}
     labels:
@@ -56,7 +52,7 @@ services:
     container_name: mongo
     image: mongo:4.4
     networks:
-      - homelab
+      - proxy
     restart: unless-stopped
     volumes:
       - ../config/your-spotify/your_spotify_db:/data/db
