--- a/docker/servarr/docker-compose.yml
+++ b/docker/servarr/docker-compose.yml
@@ -50,7 +50,8 @@ services:
       - traefik.http.routers.qbt.tls.certresolver=cloudflare
       - traefik.http.services.qbt.loadbalancer.server.port=8080
     depends_on:
-      - gluetun
+      gluetun:
+        condition: service_healthy
 
   radarr:
     image: lscr.io/linuxserver/radarr:latest
@@ -72,7 +73,8 @@ services:
       - traefik.http.routers.radarr.tls.certresolver=cloudflare
       - traefik.http.services.radarr.loadbalancer.server.port=7878
     depends_on:
-      - gluetun
+      gluetun:
+        condition: service_healthy
 
   sonarr:
     image: lscr.io/linuxserver/sonarr:latest
@@ -94,36 +96,37 @@ services:
       - traefik.http.routers.sonarr.tls.certresolver=cloudflare
       - traefik.http.services.sonarr.loadbalancer.server.port=8989
     depends_on:
-      - gluetun
+      gluetun:
+        condition: service_healthy
 
   plex:
     container_name: plex
     ports:
-        # WebUI
-        - '32400:32400/tcp'
-        # Companion Apps
-        - '3005:3005/tcp'
-        # Plex for Roku Companion
-        # - '8324:8324/tcp'
-        # DLNA Server
-        # - '32469:32469/tcp'
-        # - '1900:1900/udp'
-        # Network discovery
-        - '32410:32410/udp'
-        - '32412:32412/udp'
-        - '32413:32413/udp'
-        - '32414:32414/udp'
+      # WebUI
+      - "32400:32400/tcp"
+      # Companion Apps
+      - "3005:3005/tcp"
+      # Plex for Roku Companion
+      # - '8324:8324/tcp'
+      # DLNA Server
+      # - '32469:32469/tcp'
+      # - '1900:1900/udp'
+      # Network discovery
+      - "32410:32410/udp"
+      - "32412:32412/udp"
+      - "32413:32413/udp"
+      - "32414:32414/udp"
     networks:
       - proxy
     restart: unless-stopped
     environment:
-        - TZ=${TZ}
-        - PLEX_CLAIM=${PLEX_CLAIM_TOKEN}
-        - ADVERTISE_IP="http://192.168.1.20:32400/"
+      - TZ=${TZ}
+      - PLEX_CLAIM=${PLEX_CLAIM_TOKEN}
+      - ADVERTISE_IP="http://192.168.1.20:32400/"
     volumes:
-        - ../config/mediastack/plex:/config
-        - ../config/mediastack/plex/transcode:/transcode
-        - ${DRIVE_PATH}:/media
+      - ../config/mediastack/plex:/config
+      - ../config/mediastack/plex/transcode:/transcode
+      - ${DRIVE_PATH}:/media
     devices:
       - /dev/dri:/dev/dri
     image: plexinc/pms-docker
@@ -150,7 +153,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.overseerr.rule=Host(`${OVERSEERR_DOMAIN}`)"
-      - "traefik.http.routers.overseerr.tls=true"      
+      - "traefik.http.routers.overseerr.tls=true"
       - "traefik.http.routers.overseerr.tls.certresolver=cloudflare"
       - "traefik.http.services.overseerr.loadbalancer.server.port=5055"
 
@@ -173,14 +176,16 @@ services:
       - traefik.http.services.prowlarr.loadbalancer.server.port=9696
     restart: unless-stopped
     depends_on:
-      - gluetun
+      gluetun:
+        condition: service_healthy
 
   flaresolverr:
     container_name: flaresolverr
     network_mode: "service:gluetun"
     environment:
-        - LOG_LEVEL=info
+      - LOG_LEVEL=info
     restart: unless-stopped
     image: ghcr.io/flaresolverr/flaresolverr:latest
     depends_on:
-      - gluetun
+      gluetun:
+        condition: service_healthy
