--- a/docker/homepage/docker-compose.yml
+++ b/docker/homepage/docker-compose.yml
@@ -1,6 +1,7 @@
 networks:
   proxy:
     name: proxy
+    external: true
 
 services:
   homepage:
@@ -10,7 +11,8 @@ services:
       PUID: 1000 # -- optional, your user id
       PGID: 992 # -- optional, your group id
     networks:
-      - proxy
+      proxy:
+        ipv4_address: 10.0.0.50
     volumes:
       - ../config/homepage:/app/config
       - /var/run/docker.sock:/var/run/docker.sock:ro # Docker integration
