--- a/docker/portainer/docker-compose.yml
+++ b/docker/portainer/docker-compose.yml
@@ -1,6 +1,7 @@
 networks:
   proxy:
     name: proxy
+    external: true
 
 volumes:
   portainer_data:
@@ -15,7 +16,8 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "portainer_data:/data"
     networks:
-      - proxy
+      proxy:
+        ipv4_address: 10.0.0.40
     ports:
       - "9443:9443"
     labels:
