--- a/docker/watchtower/docker-compose.yml
+++ b/docker/watchtower/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     image: containrrr/watchtower
     container_name: watchtower
     networks:
-      - proxy
+      proxy:
+        ipv4_address: 10.0.0.80
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
