--- a/docker/wireguard/docker-compose.yml
+++ b/docker/wireguard/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       LANG: en
       WG_HOST: ${WG_HOST}
       PASSWORD: ${ADMIN_PASSWORD}
-      WG_DEFAULT_DNS: 172.19.0.5
+      WG_DEFAULT_DNS: 10.0.0.20
     volumes:
       - ../config/wg-easy:/etc/wireguard
     ports:
@@ -24,7 +24,8 @@ services:
       - net.ipv4.ip_forward=1
     restart: unless-stopped
     networks:
-      - proxy
+      proxy:
+        ipv4_address: 10.0.0.90
     labels:
       - traefik.enable=true
       - traefik.http.routers.wg-easy.rule=Host(`${DOMAIN_NAME}`)
