--- a/docker/traefik/docker-compose.yml
+++ b/docker/traefik/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - "--certificatesresolvers.cloudflare.acme.dnschallenge.provider=cloudflare"
       - "--certificatesresolvers.cloudflare.acme.dnschallenge.resolvers=1.1.1.1:53, 1.0.0.1:53"
       - "--providers.docker.exposedbydefault=false"
+      - "--providers.file.directory=/dynamic-config"
     ports:
       - 80:80
       - 443:443
@@ -39,6 +40,7 @@ services:
     volumes:
       - ${CONFIG_PATH}:/letsencrypt:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ../config/traefik/dynamic:/dynamic-config
     networks:
       proxy:
         ipv4_address: 10.0.0.10
