--- a/docker/traefik/docker-compose.yml
+++ b/docker/traefik/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     volumes:
       - ${CONFIG_PATH}:/letsencrypt:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ${CONFIG_PATH/dynamic:/dynamic-config
+      - ${CONFIG_PATH}/dynamic:/dynamic-config
     networks:
       proxy:
         ipv4_address: 10.0.0.10
