--- a/docker/traefik/.env.example
+++ b/docker/traefik/.env.example
@@ -1,3 +1,2 @@
-CLOUDFLARE_EMAIL="email@example.com"
+TRAEFIK_CERTIFICATESRESOLVERS_<NAME>_ACME_EMAIL="email"
 CF_API_TOKEN="token"
-CONFIG_PATH="/path/to/config"
