--- a/docker/traefik/docker-compose.yml
+++ b/docker/traefik/docker-compose.yml
@@ -5,6 +5,10 @@ networks:
       config:
         - subnet: 10.0.0.0/24
 
+volumes:
+  letsencrypt:
+
+
 services:
   traefik:
     image: traefik:latest
@@ -12,35 +16,19 @@ services:
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true
-    command:
-      - "--global.checknewversion=true"
-      - "--global.sendanonymoususage=false"
-      - "--api.dashboard=false"
-      - "--api.insecure=false"
-      - "--entrypoints.web"
-      - "--entrypoints.web.address=:80"
-      - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
-      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
-      - "--entrypoints.websecure"
-      - "--entrypoints.websecure.address=:443"
-      - "--certificatesresolvers.cloudflare"
-      - "--certificatesresolvers.cloudflare.acme.email=${CLOUDFLARE_EMAIL}"
-      - "--certificatesresolvers.cloudflare.acme.storage=/letsencrypt/acme.json"
-      - "--certificatesresolvers.cloudflare.acme.dnschallenge.provider=cloudflare"
-      - "--certificatesresolvers.cloudflare.acme.dnschallenge.resolvers=1.1.1.1:53, 1.0.0.1:53"
-      - "--providers.docker.exposedbydefault=false"
-      - "--providers.file.directory=/dynamic-config"
     ports:
       - 80:80
       - 443:443
     environment:
-      - CLOUDFLARE_EMAIL=${CLOUDFLARE_EMAIL}
       - CF_DNS_API_TOKEN=${CF_API_TOKEN}
       - CF_ZONE_API_TOKEN=${CF_API_TOKEN}
     volumes:
-      - ${CONFIG_PATH}:/letsencrypt:rw
+      # Volume for letsencypt acme
+      - letsencrypt:/letsencrypt:rw
+      # Configuration file
+      - .:/etc/traefik
+      # Reading the docker sock for configuring services
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ${CONFIG_PATH}/dynamic:/dynamic-config
     networks:
       proxy:
         ipv4_address: 10.0.0.10
