--- a/docker/traefik/docker-compose.yml
+++ b/docker/traefik/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     ports:
       - 80:80
       - 443:443
+      - 8080:8080
     environment:
       - CF_DNS_API_TOKEN=${CF_API_TOKEN}
       - CF_ZONE_API_TOKEN=${CF_API_TOKEN}
@@ -29,6 +30,8 @@ services:
       - .:/etc/traefik
       # Reading the docker sock for configuring services
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      # Dynamic configuration file
+      - ./dynamic.yml:/config/dynamic.yml
     networks:
       proxy:
         ipv4_address: 10.0.0.10
