--- a/docker/traefik/traefik.yml
+++ b/docker/traefik/traefik.yml
@@ -3,8 +3,8 @@ global:
   sendAnonymousUsage: false
 
 api:
-  dashboard: false
-  insecure: false
+  dashboard: true
+  insecure: true
 
 entryPoints:
   web:
@@ -31,3 +31,5 @@ certificatesResolvers:
 providers:
   docker:
     exposedByDefault: false
+  file:
+    directory: /config
