--- a/docker/pihole-unbound/docker-compose.yml
+++ b/docker/pihole-unbound/docker-compose.yml
@@ -3,13 +3,18 @@ networks:
     name: proxy
     external: true
 
+volumes:
+  pihole-pihole:
+  pihole-dnsmasq:
+  unbound:
+
 services:
   unbound:
     container_name: unbound
     restart: unless-stopped
     image: "${IMAGE}:latest"
     volumes:
-      - "../config/pihole-unbound:/opt/unbound/etc/unbound/unbound.log"
+      - "unbound:/etc/unbound"
     networks:
       proxy:
         ipv4_address: 10.0.0.30
@@ -19,6 +24,7 @@ services:
     hostname: pihole
     image: pihole/pihole:latest
     ports:
+      - "8090:80"
       - "53:53/tcp"
       - "53:53/udp"
     networks:
@@ -33,8 +39,8 @@ services:
       WEBPASSWORD: "${WEBPASSWORD}"
       QUERY_LOGGING: false
     volumes:
-      - "../config/pihole-unbound/pihole:/etc/pihole"
-      - "../config/pihole-unbound/dnsmasq.d:/etc/dnsmasq.d"
+      - "pihole-pihole:/etc/pihole"
+      - "pihole-dnsmasq:/etc/dnsmasq.d"
     restart: unless-stopped
     labels:
       - traefik.enable=true
