--- a/docker/servarr/docker-compose.yml
+++ b/docker/servarr/docker-compose.yml
@@ -35,9 +35,9 @@ services:
       - VPN_SERVICE_PROVIDER=${VPN_SERVICE_PROVIDER}
       - OPENVPN_USER=${VPN_USERNAME}
       - OPENVPN_PASSWORD=${VPN_PASSWORD}
-      - SERVER_HOSTNAMES=${VPN_HOSTNAMES}
+      - SERVER_COUNTRIES=${VPN_COUNTRIES}
     volumes:
-      - ../config/mediastack/gluetun:/gluetun
+      - ${CONFIG_PATH}/gluetun:/gluetun
     labels:
       - com.centurylinklabs.watchtower.enable=false
 
@@ -51,7 +51,7 @@ services:
       - TZ=${TZ}
       - WEBUI_PORT=8080
     volumes:
-      - ../config/mediastack/qbittorrent:/config
+      - ${CONFIG_PATH}/qbittorrent:/config
       - ${DRIVE_PATH}/Downloads:/downloads
     restart: unless-stopped
     labels:
@@ -73,7 +73,7 @@ services:
       - PGID=1000
       - TZ=${TZ}
     volumes:
-      - ../config/mediastack/radarr:/config
+      - ${CONFIG_PATH}/radarr:/config
       - ${DRIVE_PATH}:/nas
       - ${DRIVE_PATH}/Downloads:/downloads
     restart: unless-stopped
@@ -96,7 +96,7 @@ services:
       - PGID=1000
       - TZ=${TZ}
     volumes:
-      - ../config/mediastack/sonarr:/config
+      - ${CONFIG_PATH}/sonarr:/config
       - ${DRIVE_PATH}:/nas
       - ${DRIVE_PATH}/Downloads:/downloads
     restart: unless-stopped
@@ -122,8 +122,8 @@ services:
       - PLEX_CLAIM=${PLEX_CLAIM_TOKEN}
       - ADVERTISE_IP="http://192.168.1.200:32400/"
     volumes:
-      - ../config/mediastack/plex:/config
-      - ../config/mediastack/plex/transcode:/transcode
+      - ${CONFIG_PATH}/plex:/config
+      - ${CONFIG_PATH}/plex/transcode:/transcode
       - ${DRIVE_PATH}:/media
     devices:
       - /dev/dri:/dev/dri
@@ -136,7 +136,7 @@ services:
       - LOG_LEVEL=debug
       - TZ=${TZ}
     volumes:
-      - ../config/mediastack/overseerr:/app/config
+      - ${CONFIG_PATH}/overseerr:/app/config
     restart: unless-stopped
     networks:
       - proxy
@@ -159,7 +159,7 @@ services:
       - UMASK=002
       - TZ=Europe/Amsterdam
     volumes:
-      - ../config/mediastack/prowlarr:/config
+      - ${CONFIG_PATH}/prowlarr:/config
     labels:
       - traefik.enable=true
       - traefik.http.routers.prowlarr.rule=Host(`${PROWLARR_DOMAIN}`)
