--- a/docker/traefik/docker-compose.yml
+++ b/docker/traefik/docker-compose.yml
@@ -19,7 +19,6 @@ services:
     ports:
       - 80:80
       - 443:443
-      - 8080:8080
     environment:
       - CF_DNS_API_TOKEN=${CF_API_TOKEN}
       - CF_ZONE_API_TOKEN=${CF_API_TOKEN}
@@ -27,11 +26,11 @@ services:
       # Volume for letsencypt acme
       - letsencrypt:/letsencrypt:rw
       # Configuration file
-      - .:/etc/traefik
+      - ${CONFIG_PATH}:/etc/traefik
       # Reading the docker sock for configuring services
       - /var/run/docker.sock:/var/run/docker.sock:ro
       # Dynamic configuration file
-      - ./dynamic.yml:/config/dynamic.yml
+      - ${CONFIG_PATH}/dynamic.yml:/config/dynamic.yml
     networks:
       proxy:
         ipv4_address: 10.0.0.10
