--- a/docker/home-assistant/docker-compose.yml
+++ b/docker/home-assistant/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     container_name: homeassistant
     image: "ghcr.io/home-assistant/home-assistant:stable"
     volumes:
-      - ../config/home-assistant:/config
+      - ${CONFIG_DIR}/home-assistant:/config
       - /etc/localtime:/etc/localtime:ro
       - /run/dbus:/run/dbus:ro
     restart: unless-stopped
