--- a/docker/wireguard/docker-compose.yml
+++ b/docker/wireguard/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       PASSWORD_HASH: ${ADMIN_PASSWORD_HASH}
       WG_DEFAULT_DNS: 10.0.0.20
     volumes:
-      - ../config/wg-easy:/etc/wireguard
+      - ${CONFIG_DIR}/wg-easy:/etc/wireguard
     ports:
       - 51820:51820/udp
     sysctls:
