removed old projects, removed ipv4 assignments which are not needed and cleaned up some containers

--- a/docker/ddns-updater/docker-compose.yml
+++ b/docker/ddns-updater/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     image: qmcgaw/ddns-updater
     container_name: ddns-updater
     networks:
-      - proxy
+      proxy:
     volumes:
       - ${CONFIG_DIR}/ddns-updater:/updater/data
     environment:
