--- a/docker/home-assistant/docker-compose.yml
+++ b/docker/home-assistant/docker-compose.yml
@@ -1,15 +1,7 @@
-networks:
-  proxy:
-    name: proxy
-    ipam:
-      config:
-        - subnet: 10.0.0.0/24
-    external: true
-
 services:
   homeassistant:
     container_name: homeassistant
-    image: "ghcr.io/home-assistant/home-assistant:stable"
+    image: "homeassistant/home-assistant"
     volumes:
       - ${CONFIG_DIR}/home-assistant:/config
       - /etc/localtime:/etc/localtime:ro
