--- a/docker/servarr/docker-compose.yml
+++ b/docker/servarr/docker-compose.yml
@@ -1,14 +1,7 @@
-networks:
-  proxy:
-    name: proxy
-    external: true
-
 services:
   gluetun:
     container_name: gluetun
     image: qmcgaw/gluetun
-    networks:
-      proxy:
     restart: unless-stopped
     cap_add:
       - NET_ADMIN
@@ -19,6 +12,11 @@ services:
       - SERVER_COUNTRIES=${VPN_COUNTRIES}
     volumes:
       - ${CONFIG_PATH}/gluetun:/gluetun
+    ports:
+      - "8080:8080"
+      - "7878:7878"
+      - "8989:8989"
+      - "9696:9696"
     labels:
       - com.centurylinklabs.watchtower.enable=false
 
@@ -35,12 +33,6 @@ services:
       - ${CONFIG_PATH}/qbittorrent:/config
       - ${DRIVE_PATH}/Downloads:/downloads
     restart: unless-stopped
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.qbt.rule=Host(`${QBITTORRENT_DOMAIN}`)
-      - traefik.http.routers.qbt.tls=true
-      - traefik.http.routers.qbt.tls.certresolver=cloudflare
-      - traefik.http.services.qbt.loadbalancer.server.port=8080
     depends_on:
       gluetun:
         condition: service_healthy
@@ -58,12 +50,6 @@ services:
       - ${DRIVE_PATH}:/nas
       - ${DRIVE_PATH}/Downloads:/downloads
     restart: unless-stopped
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.radarr.rule=Host(`${RADARR_DOMAIN}`)
-      - traefik.http.routers.radarr.tls=true
-      - traefik.http.routers.radarr.tls.certresolver=cloudflare
-      - traefik.http.services.radarr.loadbalancer.server.port=7878
     depends_on:
       gluetun:
         condition: service_healthy
@@ -81,12 +67,6 @@ services:
       - ${DRIVE_PATH}:/nas
       - ${DRIVE_PATH}/Downloads:/downloads
     restart: unless-stopped
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.sonarr.rule=Host(`${SONARR_DOMAIN}`)
-      - traefik.http.routers.sonarr.tls=true
-      - traefik.http.routers.sonarr.tls.certresolver=cloudflare
-      - traefik.http.services.sonarr.loadbalancer.server.port=8989
     depends_on:
       gluetun:
         condition: service_healthy
@@ -94,8 +74,6 @@ services:
   plex:
     container_name: plex
     hostname: plex
-    networks:
-      proxy:
     restart: unless-stopped
     ports:
       - "32400:32400"
@@ -113,20 +91,14 @@ services:
   overseerr:
     image: sctx/overseerr:latest
     container_name: overseerr
+    ports:
+      - "5055:5055"
     environment:
       - LOG_LEVEL=debug
       - TZ=${TZ}
     volumes:
       - ${CONFIG_PATH}/overseerr:/app/config
     restart: unless-stopped
-    networks:
-      - proxy
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.overseerr.rule=Host(`${OVERSEERR_DOMAIN}`)"
-      - "traefik.http.routers.overseerr.tls=true"
-      - "traefik.http.routers.overseerr.tls.certresolver=cloudflare"
-      - "traefik.http.services.overseerr.loadbalancer.server.port=5055"
 
   prowlarr:
     container_name: prowlarr
@@ -139,12 +111,6 @@ services:
       - TZ=${TZ}
     volumes:
       - ${CONFIG_PATH}/prowlarr:/config
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.prowlarr.rule=Host(`${PROWLARR_DOMAIN}`)
-      - traefik.http.routers.prowlarr.tls=true
-      - traefik.http.routers.prowlarr.tls.certresolver=cloudflare
-      - traefik.http.services.prowlarr.loadbalancer.server.port=9696
     restart: unless-stopped
     depends_on:
       gluetun:
