--- a/ansible/roles/update/tasks/main.yml
+++ b/ansible/roles/update/tasks/main.yml
@@ -1,12 +1,22 @@
 ---
-- name: Update APT package cache
-  become: true
-  apt:
-    update_cache: yes
+# - name: Update APT package cache
+#   become: true
+#   ansible.builtin.apt:
+#     update_cache: true
 
-- name: Upgrade packages
+# - name: Upgrade packages
+#   become: true
+#   ansible.builtin.apt:
+#     upgrade: dist
+#     autoremove: true
+#     autoclean: true
+
+- name: Check if reboot required
   become: true
-  apt:
-    upgrade: dist
-    autoremove: yes
-    autoclean: yes
+  ansible.builtin.stat:
+    path: /var/run/reboot-required
+  register: reboot_required
+
+- name: Debug reboot required
+  ansible.builtin.debug:
+    msg: "Machine {{ ansible_hostname }} needs a reboot: {{ reboot_required.stat.exists }}"
